This is the Functonal and class component and Fundamnetals of JSX

--- a/Index.html
+++ b/Index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Namaste React Learning </title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Namaste React Learning</title>
     <link rel="stylesheet" href="./index.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="root">
-        <h1>This is H1 tag</h1>
+      <h1>This is H1 tag</h1>
     </div>
     <script type="module" src="./basic_React.js"></script>
-
-</body>
-
+  </body>
 </html>
